--- a/motion/templates/widgets/members.html
+++ b/motion/templates/widgets/members.html
@@ -1,8 +1,9 @@
 {% load i18n %}
+
 <div class="widget widget-members">
     <h3 class="design-highlight-color">
         {% blocktrans count memberships.total_results as count %}
-            {{ count }} Member
+            1 Member
         {% plural %}
             {{ count }} Members
         {% endblocktrans %}
