--- a/motion/templates/featured_member.html
+++ b/motion/templates/featured_member.html
@@ -1,18 +1,28 @@
 {% extends "member.html" %}
 
+{% block page_id %}featured-member{% endblock %}
+
 {% block beta_widgets %}
 	{% include "widgets/members.html" %}
 {% endblock %}
 
+{% block content_head %}
+{% if is_self and user.is_featured_member %}
+<div id="user-compose-friends" class="design-compose-background"></div>
+{% else %}
+{{ block.super }}
+{% endif %}
+{% endblock %}
+
 {% block content_body %}
+    {% if is_self and user.is_featured_member %}
+	    <div id="featured-member-compose" class="pkg">
+        {% include "bits/compose_form.html" %}
+        </div>
+    {% endif %}
+
     <div class="actions">
         <h2>{{ member.display_name }}'s Recent Activity</h2>
-
-	    {% if is_self and user.is_featured_member %}
-	    <div id="featured-member-compose" class="pkg">
-	        {% include "bits/compose_form.html" %}
-	    </div>
-	    {% endif %}
 
         {% with page_obj.object_list as events %}
         {% include "bits/event_list.html" %}
