--- a/motion/templates/assets/body/video.html
+++ b/motion/templates/assets/body/video.html
@@ -1,16 +1,7 @@
 {% extends "assets/body/base.html" %}
 
 {% block content %}
-
 <div>
-    <a href="{{ entry.get_absolute_url }}">
-
-        {% for video in entry.links.rel__enclosure %}
-            {% autoescape off %}{{ video.html }}{% endautoescape %}
-        {% endfor %}
-
-    </a>
+    {% autoescape off %}{{ entry.html }}{% endautoescape %}
 </div>
-
 {% endblock %}
-
