--- a/motion/templates/bits/navigation.html
+++ b/motion/templates/bits/navigation.html
@@ -17,7 +17,7 @@
                     <a href="{{ url_home }}">{% trans "Home" %}</a>
                 </li>
                 <li class="events{% if request.path|regex_starts_with:url_group_events %} current{% endif %}">
-                    <a href="{{ url_group_events }}">{% trans "Public Timeline" %}</a>
+                    <a href="{{ url_group_events }}">{% trans "Everyone" %}</a>
                 </li>
                 {% if user.is_authenticated %}
                     <li class="following{% if request.path|regex_starts_with:url_following_events %} current{% endif %}">
@@ -36,11 +36,11 @@
                         <a href="{{ url_home }}">{% trans "Following" %}</a>
                     </li>
                     <li class="events{% if request.path|regex_starts_with:url_group_events %} current{% endif %}">
-                        <a href="{{ url_group_events }}">{% trans "Public Timeline" %}</a>
+                        <a href="{{ url_group_events }}">{% trans "Everyone" %}</a>
                     </li>
                 {% else %}
                     <li class="home{% ifequal view 'home' %} current{% endifequal %}{% if request.path|regex_starts_with:url_group_events %} current{% endif %}">
-                        <a href="{{ url_home }}">{% trans "Public Timeline" %}</a>
+                        <a href="{{ url_home }}">{% trans "Everyone" %}</a>
                     </li>
                 {% endif %}
                 <li class="members{% if request.path|regex_starts_with:url_members %} current{% endif %}{% if request.path|regex_search:"/entry/\w+$" %} current{% endif %}">
@@ -51,7 +51,7 @@
 
                 {# Group events is homepage #}
                 <li class="home{% ifequal view 'home' %} current{% endifequal %}{% if request.path|regex_starts_with:url_group_events %} current{% endif %}">
-                    <a href="{{ url_home }}">{% trans "Public Timeline" %}</a>
+                    <a href="{{ url_home }}">{% trans "Everyone" %}</a>
                 </li>
                 <li class="following{% if request.path|regex_starts_with:url_following_events %} current{% endif %}">
                     <a href="{{ url_following_events }}">{% trans "Following" %}</a>
