Moved the favicon into the theme folder so it's easier for sites to have a custom icon.

--- a/motion/templates/bits/html_head.html
+++ b/motion/templates/bits/html_head.html
@@ -2,7 +2,7 @@
 <meta name="generator" content="spacegiraffe 1.0" />
 <link rel="stylesheet" href="{{ settings.media_url }}themes/{{ settings.theme }}/style.css" type="text/css" />
 <link rel="start" href="{% url home %}" title="Home" />
-<link rel="shortcut icon" type="image/x-icon" href="{{ settings.media_url }}favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="{{ settings.media_url }}themes/{{ settings.theme }}/favicon.ico" />
 <script type="text/javascript" src="{{ settings.media_url }}typepadapp/js/jquery.js"></script>
 
 <!-- jQuery Plugins & Functions - FIXME: Concatenate before releasing Motion -->
