--- a/motion/templates/404.html
+++ b/motion/templates/404.html
@@ -8,7 +8,7 @@
     <meta name="generator" content="spacegiraffe 1.0" />
     <link rel="stylesheet" href="{{ settings.media_url }}themes/motion/style.css" type="text/css" />
     <link rel="start" href="{% url home %}" title="Home" />
-    <link rel="shortcut icon" type="image/x-icon" href="{{ settings.media_url }}favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="{{ settings.media_url }}themes/motion/favicon.ico" />
     <title>{{ request.group.display_name }} / 404</title>
 </head>
 
