Oops! Forgot to check in soundmanager changes in the html.

--- a/motion/templates/bits/html_head.html
+++ b/motion/templates/bits/html_head.html
@@ -55,11 +55,11 @@ settings.use_dwim = true;
 <script type="text/javascript" language="javascript" src="{{ request.get_session_synchronization_url }}"></script>
 
 <!-- Audio Player for audio files -->
-<link rel="stylesheet" type="text/css" href="{{ settings.media_url }}soundmanager/inlineplayer.css" />
-<script type="text/javascript" src="{{ settings.media_url }}soundmanager/soundmanager2-nodebug-jsmin.js"></script>
-<script type="text/javascript" src="{{ settings.media_url }}soundmanager/inlineplayer.js"></script>
+<link rel="stylesheet" type="text/css" href="{{ settings.media_url }}typepadapp/soundmanager/inlineplayer.css" />
+<script type="text/javascript" src="{{ settings.media_url }}typepadapp/soundmanager/soundmanager2-nodebug-jsmin.js"></script>
+<script type="text/javascript" src="{{ settings.media_url }}typepadapp/soundmanager/inlineplayer.js"></script>
 <script type="text/javascript">
 /* <![CDATA[ */
-soundManager.url = '{{ settings.media_url }}soundmanager/';
+soundManager.url = '{{ settings.media_url }}typepadapp/soundmanager/';
 /* ]]> */
 </script>
