Fix for importing the debug toolbar js. Should the debug toolbar template be in typepadapp?

--- a/motion/templates/debug_toolbar.html
+++ b/motion/templates/debug_toolbar.html
@@ -14,7 +14,7 @@
 <script type="text/javascript" src="http://alexgorbatchev.com/pub/sh/2.0.296/scripts/shBrushJScript.js"></script>
 <script type="text/javascript" src="http://alexgorbatchev.com/pub/sh/2.0.296/scripts/shBrushPlain.js"></script>
 {% endcomment %}
-<script type="text/javascript" src="/static/debug.js"></script>
+<script type="text/javascript" src="/static/typepadapp/js/debug.js"></script>
 <style type="text/css">
     @import url(/static/typepadapp/css/debug.css);
 </style>
