Use media block for video; preserves text portion of video post.

--- a/motion/templates/assets/body/video.html
+++ b/motion/templates/assets/body/video.html
@@ -1,6 +1,6 @@
 {% extends "assets/body/base.html" %}
 
-{% block content %}
+{% block media %}
 <div>
     {% autoescape off %}{{ entry.html }}{% endautoescape %}
 </div>
