Some updates for IE6.

--- a/motion/templates/bits/html_head.html
+++ b/motion/templates/bits/html_head.html
@@ -27,6 +27,14 @@
 <script type="text/javascript" src="{{ settings.media_url }}typepadapp/js/jquery.dump.js"></script>
 {% endif %}
 
+<script type="text/javascript">
+/* <![CDATA[ */
+var clear_pixel = '{{ settings.media_url }}typepadapp/images/clear.gif';
+/* ]]> */
+</script>
+<!--[if lt IE 7]>
+<script type="text/javascript" src="{{ settings.media_url }}typepadapp/js/ie6pngfix.js"></script>
+<![endif]--> 
 <script type="text/javascript" src="{{ settings.media_url }}motion/js/motion.js"></script>
 <script type="text/javascript">
 /* <![CDATA[ */
