--- a/motion/static/theme/style.css
+++ b/motion/static/theme/style.css
@@ -6,7 +6,7 @@ body {
     font-size: 62.5%;
     font-family: "Helvetica Neue", Arial, Verdana;
     background-color: #00334c;
-    background-image: url(images/page-bg.png);
+    background-image: url(images/page-bg.jpg);
     background-repeat: repeat-x;
 }
 a:link,
@@ -137,7 +137,7 @@ p {
 }
 .submit-wrapper button {
     background-color: #fff;
-    background-image: url(images/post-it-bg.png);
+    background-image: url(images/post-it-bg.jpg);
     background-repeat: repeat-x;
     height: 31px;
     border: 3px solid #fff;
@@ -354,7 +354,7 @@ p {
 }
 
 #user-compose-friends {
-    background: #dceddc url(images/compose-bg.png) repeat-x 0 top;
+    background: #dceddc url(images/compose-bg.jpg) repeat-x 0 top;
     position: relative;
     -moz-border-radius-topleft: 4px;
     -moz-border-radius-topright: 4px;
@@ -464,6 +464,7 @@ p {
 }
 #form-compose {
     position: relative;
+    padding-top: 45px;
 }
 #compose-userpic {
     border: 1px solid #ccc;
@@ -545,8 +546,9 @@ p {
     font-size: 20px;
 }
 #entry-types {
-    float: right;
-    padding-bottom: 5px;
+    position: absolute;
+    top: 5px;
+    right: 5px;
 }
 #entry-types li {
     float: left;
@@ -560,7 +562,7 @@ p {
     text-indent: -9999px;
     width: 32px;
     height: 32px;
-    background-image: url(images/post-types.png);
+    background-image: url(images/post-types.gif);
     background-repeat: no-repeat;
     background-position: 0 -65px;
     margin: 0px 1px 0 0;
@@ -668,7 +670,7 @@ body.error {
 
 /* entry type tab sprites */
 .asset .icon {
-    background-image: url(images/post-type-tabs.png);
+    background-image: url(images/post-type-tabs.gif);
     height: 32px;
     width: 38px;
     background-position: 0 -224px;
@@ -842,7 +844,7 @@ button.button-delete {
 }
 .asset .asset-meta .favorite-action,
 .asset .asset-meta .favorite-count {
-    background: url(images/favorite-stars.png) no-repeat right -48px; /*0;*/
+    background: url(images/favorite-stars.gif) no-repeat right -48px; /*0;*/
     margin: 5px 5px 0 0;
     padding-right: 22px;
     display: block;
