--- a/motion/static/theme/style.css
+++ b/motion/static/theme/style.css
@@ -253,6 +253,7 @@ p {
     font-weight: bold;
     height: 15px; /* with padding, 31px */
     color: #777;
+    float: left;
     -moz-border-radius-topleft: 4px;
     -moz-border-radius-topright: 4px;
     -webkit-border-top-left-radius: 4px;
@@ -547,8 +548,8 @@ p {
 }
 #entry-types {
     position: absolute;
-    top: 5px;
-    right: 5px;
+    top: 3px;
+    right: 3px;
 }
 #entry-types li {
     float: left;
