Fix for IE6 posting problem; button without 'submit' type doesn't submit form.

--- a/motion/templates/bits/compose_form.html
+++ b/motion/templates/bits/compose_form.html
@@ -76,7 +76,7 @@
                     <a href="#more-options" id="more-options" class="more-options">{% trans "+ more options" %}</a>
                     {% endif %}
                     {% endif %}
-                    <button id="post-submit" name="post" value="Post">{% trans "Post" %}</button>
+                    <button type="submit" id="post-submit" name="post" value="Post">{% trans "Post" %}</button>
                     <button id="post-submit-posting" class="posting" name="posting" value="Posting" disabled="true">{% trans "Posting..." %}</button>
                 </p>
             </form>
