--- a/motion/templates/permalink.html
+++ b/motion/templates/permalink.html
@@ -62,7 +62,7 @@
                 <form method="post" action="" name="comments_form" id="comments-form">
                     <div>{{ form.body }}</div>
                     <div>
-                        <button id="comment-submit" name="comment" value="Submit">{% trans "Post" %}</button>
+                        <button type="submit" id="comment-submit" name="comment" value="Submit">{% trans "Post" %}</button>
                     </div>
                 </form>
             {% else %}
