--- a/motion/static/theme/style.css
+++ b/motion/static/theme/style.css
@@ -1817,6 +1817,10 @@ ul.profile-data li .edit {
     max-width: 460px;
     height: auto;
 }
+.asset-body img.constrained {
+    width:460px;
+    height:auto;
+}
 #alpha,
 #beta {
     float: left;
