This image moved over here.

--- a/motion/templates/member.html
+++ b/motion/templates/member.html
@@ -62,7 +62,7 @@
             <li class="user-twitter" id="twitter_status"></li>
             {% endif %}
 
-            <li><img src="{{ settings.media_url }}images/services/typepad.png" height="16" width="16" alt="TypePad" />&nbsp;
+            <li><img src="{{ settings.media_url }}motion/images/services/typepad.png" height="16" width="16" alt="TypePad" />&nbsp;
                 <a href="{{ member.typepad_url }}" rel="me" target="_blank">{% if is_self %}{% trans "Edit my TypePad profile" %}{% else %}{% trans "View full TypePad profile" %}{% endif %}</a>
             </li>
 
