Ban (or unban) a user.

--- a/motion/templates/member.html
+++ b/motion/templates/member.html
@@ -19,13 +19,7 @@
 {% block content_body %}
     <div class="profile-header">
 
-        {% if not is_member %}
-        <div class="msg msg-info">
-            {% blocktrans with member.display_name as name %}
-            {{ name }} is no longer a member of this site, but their activity is archived.
-            {% endblocktrans %}
-        </div>
-        {% endif %}
+        {% include "bits/member_status.html" %}
 
         <div class="userpic">
             {% with member.links.rel__avatar.width__100 as userpic %}
