Suppress following tab for unauth'd views.

--- a/motion/templates/bits/navigation.html
+++ b/motion/templates/bits/navigation.html
@@ -19,7 +19,7 @@
                 <li class="events{% if request.path|regex_starts_with:url_group_events %} current{% endif %}">
                     <a href="{{ url_group_events }}">{% trans "Everyone" %}</a>
                 </li>
-                {% if user.is_authenticated %}
+                {% if request.user.is_authenticated %}
                     <li class="following{% if request.path|regex_starts_with:url_following_events %} current{% endif %}">
                         <a href="{{ url_following_events }}">{% trans "Following" %}</a>
                     </li>
@@ -31,7 +31,7 @@
             {% else %}{% if settings.home_member_events %}
 
                 {# Following events is homepage #}
-                {% if user.is_authenticated %}
+                {% if request.user.is_authenticated %}
                     <li class="home{% ifequal view 'home' %} current{% endifequal %} {% if request.path|regex_starts_with:url_following_events %} current{% endif %}">
                         <a href="{{ url_home }}">{% trans "Following" %}</a>
                     </li>
@@ -53,9 +53,11 @@
                 <li class="home{% ifequal view 'home' %} current{% endifequal %}{% if request.path|regex_starts_with:url_group_events %} current{% endif %}">
                     <a href="{{ url_home }}">{% trans "Everyone" %}</a>
                 </li>
+                {% if request.user.is_authenticated %}
                 <li class="following{% if request.path|regex_starts_with:url_following_events %} current{% endif %}">
                     <a href="{{ url_following_events }}">{% trans "Following" %}</a>
                 </li>
+                {% endif %}
                 <li class="members{% if request.path|regex_starts_with:url_members %} current{% endif %}{% if request.path|regex_search:"/entry/\w+$" %} current{% endif %}">
                     <a href="{{ url_members }}">{% trans "Members" %}</a>
                 </li>
